--- a/business/package.json
+++ b/business/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.1",
+    "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0"
   }
 }
