--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
       "koa-session": "^5.5.1",
       "koa-static": "^4.0.2",
       "mongoose": "^4.13.4",
+      "request": "^2.83.0",
       "request-promise": "^4.2.2",
       "webpack": "^3.8.1"
    },
