--- a/server/src/components/client/login/config.json
+++ b/server/src/components/client/login/config.json
@@ -1,4 +1,4 @@
 {
-    "appid": "wx4b05bde965d87de0",
-    "secret": "f2c03aa2dc790e0be88068e154f0dd95"
+    "appid": "wx9e3eafdbb24f089c",
+    "secret": "70e53c0407a5edce0790a2ce0ba58fd2"
 }
